--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="img/icon-heart-mc.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Un mesito juntos</title>
+    <title>Un mesesito juntos</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -332,7 +333,7 @@
                 </div>
             </section>
             <section class="section-parallax-two">
-                <div class="content-text">
+                <div class="content-text-size">
                     <h2 style="font-size: 14rem;">
                         TE AMO
                     </h2>
